cleaned up a ton of things, added a nice font, everything is wrapped correctly so you can create absolutely positioned items.

--- a/omnibar.css
+++ b/omnibar.css
@@ -1,3 +1,26 @@
+/* fonts */
+
+@font-face {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 300;
+    src: local('Raleway Light'), local('Raleway-Light'), url(https://fonts.gstatic.com/s/raleway/v9/-_Ctzj9b56b8RgXW8FAriS3USBnSvpkopQaUR-2r7iU.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Raleway'), url(https://fonts.gstatic.com/s/raleway/v9/bIcY3_3JNqUVRAQQRNVteQ.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 500;
+    src: local('Raleway Medium'), local('Raleway-Medium'), url(https://fonts.gstatic.com/s/raleway/v9/CcKI4k9un7TZVWzRVT-T8y3USBnSvpkopQaUR-2r7iU.ttf) format('truetype');
+}
+
+body { font-family: "Raleway" }
+
 /* first a css reset, of the meyer kind */
 .ob-reset {
     margin: 0;
@@ -9,26 +32,9 @@
 }
 
 /* end reset */
-#ob-top-gutter {
+#ob-omnibar-outer {
     /* For testing */
-    /*background-color: rgba(255,255,0,0.05);*/
-
-    /* The real deal */
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    height: 24px;
-
-    width: auto;
-
-    /* styling */
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-#ob-omnibar {
-    /* For testing */
-    background-color: rgba(0,255,0,0.05);
+    background-color: rgba(0,0,0,0.05);
 
     /* The real deal */
     position: fixed;
@@ -40,73 +46,75 @@
     width: auto;
 
     /* styling */
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-#ob-omnibar > .ob-inner > input {
+#ob-omnibar-outer > .ob-inner > input {
     outline: none;
     background: transparent;
     border: 0;
-    color: green;
+    color: rgba(20, 20, 20, 0.8);
     font-size: 32px;
+    background-color: white;
 
     position: absolute;
     top: 10px;
-    right: 10px;
-    left: 10px;
+    right: 12px;
+    left: 0px;
     bottom: 10px;
     padding: 10px;
-    border: 1px solid rgba(0, 0, 0, 0.1);    
+    border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-#ob-left-control {
-    /* For testing */
-    background-color: rgba(255,0,0,0.05);
-
+#ob-left-control-outer {
     /* The real deal */
     position:fixed;
     top: 80px;
     left: 0px;
     bottom: 0px;
     width: 160px;
+    text-align: center;
+    font-size: 14px;
     
     /* styling */
     border-right: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-#ob-left-widget {
+#ob-left-widget-outer {
     /* For testing */
-    background-color: rgba(0,128,255,0.05);
+    background-color: rgba(0,0,0,0.05);
 
-    /* The real deal */
+     /* The real deal */
     position:fixed;
     top: 0px;
     left: 0px;
     width: 160px;
     height: 80px;
-    
+
     /* styling */
-    border-right: 1px solid rgba(0, 0, 0, 0.1);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-#ob-content {
-    /* For testing */
-    background-color: rgba(0,255,255,0.05);
-
+#ob-content-outer {
     /* the real deal */
-    position:fixed;
+    position: fixed;
     top: 80px;
     left: 160px;
-    right:0px;
+    right: 0px;
     bottom: 0px;
-    overflow: scroll;
+}
+
+#ob-content-inner {
+    height: 100%;
+    overflow: auto;
+    padding-right: 20px;
 }
 
 .ob-inner {
-    width: 100%;
+    margin:0px;
+    padding:0px;
     height: 100%;
+    width: 100%;
     position: relative;
 }
 
@@ -115,11 +123,8 @@
     bottom: 20px;
     width: 100%;
     text-align: center;
-    font-size: 24px;
-    
+    font-size: 30px;
 }
-
-
 
 #ob-help {
 
@@ -128,3 +133,10 @@
 .ob-view { }
 .ob-litem { }
 .ob-modal { }
+
+/* things you should modify below. */
+
+#ob-content {
+    padding: 20px;
+}
+
